--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   gtag('config', 'UA-102176832-1');
 </script>
 
-<title>Tamara Pico</title>
+<title>Tamara and Kevin</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
