--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
 	<div class="about-grids">
              <div class="col-md-6 about-grids-right">
-                <img src="images/HudsonGazettephoto_website2.jpg" alt=" " class="img-responsive" />
+                <img src="images/engagement.jpeg" alt=" " class="img-responsive" />
 		      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-heading panel_text">
                               <h3></h3>
