--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html">Tamara and Kevin</a></h1>
+						<h1><a class="navbar-brand" href="index.html">Tamara and Kevin's Wedding</a></h1>
 					</div>
 				</div>
 
