--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<nav class="menu menu--francisco">
 						<ul class="nav navbar-nav menu__list">
 							<li class="menu__item menu__item--current"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
-							
+							<li class="menu__item "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
 	<!--<li class="menu__item"><a href="#CONTACT" class="menu__link"><span class="menu__helper">Contact</span></a></li>-->
 						</ul>
 					</nav>
