--- a/index.html
+++ b/index.html
@@ -114,14 +114,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="about-grids">
              <div class="col-md-6 about-grids-right">
                 <img src="images/engagement.jpeg" alt=" " class="img-responsive" />
+		<img src="images/camping.jpeg" alt=" " class="img-responsive" />
+		<img src="images/kauairainbow.jpeg" alt=" " class="img-responsive" />
 		      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-heading panel_text">
                               <h3></h3>
-				    <br>
-
-				
-				
-			
 	
                             </div>
                         </div>
