--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html">Tamara and Kevin's Wedding</a></h1>
+						<h1><a class="navbar-brand" href="index.html">Tamara & Kevin's Wedding</a></h1>
 					</div>
 				</div>
 
@@ -101,7 +101,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h2> August 13, 2021</h2>
 				    <br><br><br>
-                              Wedding blurb
+                              
 				    <br><br><br>
 				
 				    <br>
