--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <link rel="icon" 
      type="image/png" 
-     href="images/ice_icon.png">
+     href="images/heart_icon.png">
 	
 <body>
 <!-- header -->
