--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="nav navbar-nav menu__list">
 							<li class="menu__item menu__item--current"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
 							<li class="menu__item "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
+							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
 	<!--<li class="menu__item"><a href="#CONTACT" class="menu__link"><span class="menu__helper">Contact</span></a></li>-->
 						</ul>
 					</nav>
