--- a/travel.html
+++ b/travel.html
@@ -72,7 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html">Pico Group</a></h1>
+						<h1><a class="navbar-brand" href="index.html">Tamara & Kevin's Wedding</a></h1>
 					</div>
 				</div>
 
