--- a/travel.html
+++ b/travel.html
@@ -131,9 +131,9 @@ T. Pico, "Linking Past to Present in a Postcolonial Field Science: How Scientifi
                 </div>
             </div>
              <div class="col-md-6 about-grids-right">
-                <img src="images/potomac_explain.jpeg" alt=" " class="img-responsive" />
+                <img src="images/aptosbeach_fb.jpeg" alt=" " class="img-responsive" />
 		     
-		     <p> <em> Explaining the impact of GIA on the Potomac's erosion history at the AGU Great Falls Field Trip, 2018 </em> </p>
+		     <p> <em>  </em> </p>
 		      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-heading panel_text">
                              
