--- a/travel.html
+++ b/travel.html
@@ -131,7 +131,7 @@ T. Pico, "Linking Past to Present in a Postcolonial Field Science: How Scientifi
                 </div>
             </div>
              <div class="col-md-6 about-grids-right">
-                <img src="images/aptosbeach_fb.jpeg" alt=" " class="img-responsive" />
+                <img src="images/aptosbeach_fb.jpg" alt=" " class="img-responsive" />
 		     
 		     <p> <em>  </em> </p>
 		      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
@@ -168,11 +168,9 @@ T. Pico, "Linking Past to Present in a Postcolonial Field Science: How Scientifi
 				<div class="footer-grids1-left ">
                     <ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li class="menu__item"><a href="research_edit.html" class="menu__link"><span class="menu__helper">Research</span></a></li>
-						<li class="menu__item"><a href="publications.html" class="menu__link"><span class="menu__helper">Publications</span></a></li>
-						<li class="menu__item"><a href="interests.html" class="menu__link"><span class="menu__helper">Interests</span></a></li>
-			    			<li class="menu__item"><a href="people.html" class="menu__link"><span class="menu__helper">People</span></a></li>
-						<li class="menu__item"><a href="join.html" class="menu__link"><span class="menu__helper">Join</span></a></li>
+						<li class="menu__item"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
+							<li class="menu__item "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
+							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
 					</ul>
 				</div>
 				<div class="footer-grids1-right">
