--- a/travel.html
+++ b/travel.html
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <img src="images/transport_paddle.jpg" alt=" " class="img-responsive" />
 		     
 		     <p> <em>  </em> </p>
-		     <img src="images/transit_kevin.jpg" alt=" " class="img-responsive" />
+		     <img src="images/kevin_transit.jpg" alt=" " class="img-responsive" />
 		     <p> <em>  </em> </p>
 		  <img src="images/aptosbeach_fb.jpg" alt=" " class="img-responsive" />
 		      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
