--- a/travel.html
+++ b/travel.html
@@ -113,12 +113,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <br><br><br>
 				    <h2> Transportation </h2>
 				     <br>
-				    SJC (San Jose) is the closest major airport to Santa Cruz  (45 minute drive). SFO and OAK are also major airports closeby (1h 10 min drive). Driving is the easiest way to get around Santa Cruz, so if you want to explore the area we suggest renting a car! 
-				    <br>
+				    SJC (San Jose) is the closest major airport to Santa Cruz  (45 minute drive). SFO and OAK are also major airports closeby (1h 10 min drive). 
+				    <br><br><br>
+				    Driving is the easiest way to get around Santa Cruz, so if you want to explore the area we suggest renting a car! 
+				    <br><br><br>
 				    For those that do not wish to rent a car we will organize rides to the wedding ceremony and reception venues!
 				      <br><br><br>
 				     <h2> Accomodation </h2>
-
+					There are a variety of hotel, motel, and house rental/airbnb options in the Santa Cruz area! We would recommend staying in the city of Santa Cruz, where there are many things to do nearby!
+				   
+				    Santa Cruz is a popular summer destination so book early to save on lodging rates!
+				     <br><br><br>
+				    Some of our favorite hotel suggestions:
+				     <br><br><br>
+				    (website in progress...)
 				</div>
                         </div>
                     </div>
