--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  Tramonti Santa Cruz  <br>
 				  528 Seabright Ave, Santa Cruz, CA 95062
 				       <br><br><br>
+				    
+				    We can't wait to celebrate with you! For those who want to plan to join in extra festivities we are planning an easy (flat) hike on Friday afternoon and a casual brunch on Sunday.
 				  
                             </div>
                         </div>
