--- a/travel.html
+++ b/travel.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <link rel="icon" 
      type="image/png" 
-     href="images/ice_icon.png">
+     href="images/heart_icon.png">
 	
 <body>
 <!-- header -->
