--- a/travel.html
+++ b/travel.html
@@ -118,6 +118,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    Driving is the easiest way to get around Santa Cruz, so if you want to explore the area we suggest renting a car! 
 				    <br><br><br>
 				    For those that do not wish to rent a car we will organize rides to the wedding ceremony and reception venues!
+				    <br><br><br>
+				    Parking will be freely available at both ceremony and reception.
 				      <br><br><br>
 				     <h2> Accomodation </h2>
 				       <br><br><br>
