--- a/faq.html
+++ b/faq.html
@@ -170,6 +170,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li class="menu__item"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
 							<li class="menu__item "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
 							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
+			    				<li class="menu__item "><a href="faq.html" class="menu__link"><span class="menu__helper">FAQ</span></a></li>
+
 					</ul>
 				</div>
 				<div class="footer-grids1-right">
