--- a/faq.html
+++ b/faq.html
@@ -84,8 +84,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						
 							<li class="menu__item"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
 							<li class="menu__item  "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
-							<li class="menu__item menu__item--current "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
-	<!--<li class="menu__item"><a href="#CONTACT" class="menu__link"><span class="menu__helper">Contact</span></a></li>-->
+							<li class="menu__item  "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
+							<li class="menu__item menu__item--current "><a href="faq.html" class="menu__link"><span class="menu__helper">FAQ</span></a></li>
+
 						</ul>
 					</nav>
 				</div>
@@ -110,7 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="panel panel-default">
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body panel_text">
-				    <h3> Things to Do! </h3>
+				    <h3> Frequently Asked Questions </h3>
 				    <br><br><br>
 				    <h2> Sites to Visit </h2>
 				     <br>
