--- a/travel.html
+++ b/travel.html
@@ -84,7 +84,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="menu__item"><a href="index.html" class="menu__link"><span class="menu__helper">Home</span></a></li>
 							<li class="menu__item  menu__item--current"><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
 							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
-	<!--<li class="menu__item"><a href="#CONTACT" class="menu__link"><span class="menu__helper">Contact</span></a></li>-->
+							<li class="menu__item "><a href="faq.html" class="menu__link"><span class="menu__helper">FAQ</span></a></li>
+
 						</ul>
 					</nav>
 				</div>
