--- a/faq.html
+++ b/faq.html
@@ -113,9 +113,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h3> Frequently Asked Questions </h3>
 				    <br><br><br>
-				    <h2> Sites to Visit </h2>
-				     <br>
-				 	    (website in progress...)
+				 	
+				    <h1> Dress Code? Cocktail attire.</h1>
+				<br><br>
+				    What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). To learn more about the dress code, check out this article!
+				    <br>
+				    The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. 
 				      <br><br><br>
 				     <h2> Food suggestions </h2>
 				       <br><br><br>
