--- a/faq.html
+++ b/faq.html
@@ -119,11 +119,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). To learn more about the dress code, check out this article!
 				    <br>
 				    The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. 
-				      <br><br><br>
-				     <h2> Food suggestions </h2>
-				       <br><br><br>
-		
-				    (website in progress...)
+				      <br><br>
+				      <h1> Are my children invited? </h1>
+		  <br><br>
+				    Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with.
+				<br><br>
+				    <h1> Any other questions right now? Just ask! </h1>
+				  <br><br>
+				    We will keep updating the website with additional information about the wedding as the time nears!
 				</div>
                         </div>
                     </div>
