--- a/faq.html
+++ b/faq.html
@@ -116,13 +116,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				 	
 				    <h4> What is the Dress Code? </h4>
 				<br><br>
-				    Cocktail attire.What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). To learn more about the dress code, check out this article!
+				   <p> Cocktail attire.What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). To learn more about the dress code, check out this article! </p> 
 				    <br>
-				    The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. 
+				    <p>  The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. </p>  
 				      <br><br>
 				      <h4> Are my children invited? </h4>
 		  <br><br>
-				    Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with.
+				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
 				<br><br>
 				    <h4> Any other questions right now? Just ask! </h4>
 				  <br><br>
