--- a/faq.html
+++ b/faq.html
@@ -126,8 +126,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
 				<br><br>
 				    <h4> Any other questions right now? Just ask! </h4>
-				  <br><br>
-				    We will keep updating the website with additional information about the wedding as the time nears!
+				  <br>
+				    <p>  We will keep updating the website with additional information about the wedding as the time nears!  </p> 
 				</div>
                         </div>
                     </div>
