--- a/faq.html
+++ b/faq.html
@@ -117,7 +117,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <h4> What is the Dress Code? </h4>
 				<br>
 				   <p> Cocktail attire. <br>
-					   What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). To learn more about the dress code, check out this article! </p> 
+					   What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). 
+					   To learn more about the dress code, check out this article!  https://www.brides.com/cocktail-attire-wedding-4844364 </p> 
 				    <br>
 				    <p>  The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. </p>  
 				      <br><br>
