--- a/todo.html
+++ b/todo.html
@@ -113,14 +113,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h3> Things to Do! </h3>
 				    <br><br><br>
-				    <h2> Sites to Visit </h2>
+				    <h2> Themed Itineraries </h2>
 				     <br>
+				    Itinerary 1: Our firsts 
+				    
+				    Our first date was studying for a calculus exam. We took a break to get Pleasure Pizza
+				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), followed by a 2 am truffle sundae at Marianne's Ice Cream!
+							       
 				 	    (website in progress...)
 				      <br><br><br>
-				     <h2> Food suggestions </h2>
+				     <h2> Other suggestions </h2>
+				    There is lots to see and do in Santa Cruz! Let us know if you have any questions - we can give you some ideas on what else to explore!
 				       <br><br><br>
 		
-				    (website in progress...)
+				  ]
 				</div>
                         </div>
                     </div>
