--- a/todo.html
+++ b/todo.html
@@ -118,7 +118,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    Itinerary 1: Our firsts 
 				    
 				    Our first date was studying for a calculus exam. We took a break to get Pleasure Pizza
-				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), followed by a 2 am truffle sundae at Marianne's Ice Cream!
+				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), 
+				    followed by a 2 am truffle sundae at <a href="https://goo.gl/maps/q3D5D1zYXcDNHixq7" target="_blank">Marianne's Ice Cream</a>! 
 							       
 				 	    (website in progress...)
 				      <br><br><br>
