--- a/todo.html
+++ b/todo.html
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <br><br><br>
 				    <h2> Themed Itineraries </h2>
 				     <br>
-				    Itinerary 1: Our firsts 
+				    <h4>Itinerary 1: Our firsts </h4>
 				     <br>
 				    Our first date was studying for a calculus exam. We took a break to get Pleasure Pizza
 				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), 
