--- a/todo.html
+++ b/todo.html
@@ -115,15 +115,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <br><br><br>
 				    <h2> Themed Itineraries </h2>
 				     <br>
-				    <h4>Itinerary 1: Our firsts </h4>
+				    <h4>Itinerary 1: Our firsts &hearts; </h4>
 				     <br>
-				    Our first date was studying for a calculus exam. We took a break to get Pleasure Pizza
+				    <ul>
+
+				     <li>  Our first date was studying for a calculus exam. We took a break to get Pleasure Pizza
 				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), 
-				    followed by a 2 am truffle sundae at <a href="https://goo.gl/maps/q3D5D1zYXcDNHixq7" target="_blank">Marianne's Ice Cream</a>! 
+				    followed by a 2 am truffle sundae at <a href="https://goo.gl/maps/q3D5D1zYXcDNHixq7" target="_blank">Marianne's Ice Cream</a>!    </li>
 				     <br> <br>
 				   <a href="https://goo.gl/maps/zcRGP6yNKg21xeWy9" target="_blank">Seabright Beach  </a>  - where we had our first kiss (midnight on New Year's Eve of 2009!) Nearby you can get a beer and tacos at  <a href="https://goo.gl/maps/Mdag7fSY6QJbu56u6" target="_blank">el Palomar</a>  and enjoy the view!
 				     <br> <br>
 				    <h4>Itinerary 2: The West Cliff Routine </h4>
+				    
 				     <br> <br>
 				     <h4>Itinerary 3: The Outdoor Adventurer </h4>
 					 <br> <br>		       
