--- a/todo.html
+++ b/todo.html
@@ -123,12 +123,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    (We ate at <a href="https://goo.gl/maps/6aZ97QWrHiJweM6U8" target="_blank">Capitola </a> but you can also try <a href="https://goo.gl/maps/iH4dPKGEDv5wyxgJ6" target="_blank">Santa Cruz </a>), 
 				    followed by a 2 am truffle sundae at <a href="https://goo.gl/maps/q3D5D1zYXcDNHixq7" target="_blank">Marianne's Ice Cream</a>!    </li>
 				     <br> <br>
-				   <a href="https://goo.gl/maps/zcRGP6yNKg21xeWy9" target="_blank">Seabright Beach  </a>  - where we had our first kiss (midnight on New Year's Eve of 2009!) Nearby you can get a beer and tacos at  <a href="https://goo.gl/maps/Mdag7fSY6QJbu56u6" target="_blank">el Palomar</a>  and enjoy the view!
+				   <li>  <a href="https://goo.gl/maps/zcRGP6yNKg21xeWy9" target="_blank">Seabright Beach  </a>  - where we had our first kiss (midnight on New Year's Eve of 2009!) Nearby you can get a beer and tacos at  <a href="https://goo.gl/maps/Mdag7fSY6QJbu56u6" target="_blank">el Palomar</a>  and enjoy the view!  </li> 
 				     <br> <br>
 					    
 					     </ul>
 				    <h4>Itinerary 2: The West Cliff Routine </h4>
-				    
+				     <ul>
+
+				     <li> Pick up a burrito togo at Jalapeños (We recommend the Downtown Veggie or the Chile Verde (pork)!)  <\li> 
+					  </ul>    
 				     <br> <br>
 				     <h4>Itinerary 3: The Outdoor Adventurer </h4>
 					 <br> <br>		       
