--- a/todo.html
+++ b/todo.html
@@ -130,9 +130,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <h4>Itinerary 2: The West Cliff Routine </h4>
 				     <ul>
 
-				     <li> Pick up a burrito togo at Jalapeños (We recommend the Downtown Veggie or the Chile Verde (pork)!)  <\li> 
-					  <li> Take your burrito to West Cliff - sit on a bench or on the cliff!  <\li>    
-					     <li> Walk down West Cliff and watch the surfers on Steamer Lane or head to Natural Bridges beach!  <\li> 
+				     <li> Pick up a burrito togo at Jalapeños (We recommend the Downtown Veggie or the Chile Verde (pork)!)  </li> 
+					  <li> Take your burrito to West Cliff - sit on a bench or on the cliff!  </li>    
+					     <li> Walk down West Cliff and watch the surfers on Steamer Lane or head to Natural Bridges beach!  </li> 
 					  </ul>    
 				     <br> <br>
 				     <h4>Itinerary 3: The Outdoor Adventurer </h4>
