--- a/todo.html
+++ b/todo.html
@@ -130,7 +130,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <h4>Itinerary 2: The West Cliff Routine </h4>
 				     <ul>
 
-				     <li> Pick up a burrito togo at Jalapeños (We recommend the Downtown Veggie or the Chile Verde (pork)!)  </li> 
+				     <li> Pick up a burrito togo at <a href="https://goo.gl/maps/NhsS1gwQH3FtQjnX6" target="_blank"> Jalapeños </a>  (We recommend the Downtown Veggie or the Chile Verde (pork)!)  </li> 
 					  <li> Take your burrito to West Cliff - sit on a bench or on the cliff!  </li>    
 					     <li> Walk down West Cliff and watch the surfers on Steamer Lane or head to Natural Bridges beach!  </li> 
 					  </ul>    
