--- a/todo.html
+++ b/todo.html
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				     <li> Pick up a burrito togo at <a href="https://goo.gl/maps/NhsS1gwQH3FtQjnX6" target="_blank"> Jalapeños </a>  (We recommend the Downtown Veggie or the Chile Verde (pork)!)  </li> 
 					  <li> Take your burrito to <a href="https://goo.gl/maps/ZdpBCfgUVXUEK3S17" target="_blank">West Cliff </a> - sit on a bench or on the cliff!  </li>    
-					     <li> Walk down West Cliff and watch the surfers on Steamer Lane or head to Natural Bridges beach!  </li> 
+					     <li> Walk down West Cliff and watch the surfers on  <a href="https://goo.gl/maps/RuFGAKSbSarGgaNb9" target="_blank"> Steamer Lane  </a> or head to <a href="https://goo.gl/maps/bjUm4aoeET4RhgFR9" target="_blank"> Natural Bridges  </a>  beach!  </li> 
 					  </ul>    
 				     <br> <br>
 				     <h4>Itinerary 3: The Outdoor Adventurer </h4>
