--- a/faq.html
+++ b/faq.html
@@ -126,6 +126,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		  <br>
 				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
 				<br><br>
+				    <h4> What is the COVID protocol? </h4>
+				    <br>
+				    <p> For everyone's safety, we will ask our guests to present negative COVID tests (rapid test or PCR) within 24 hrs of the ceremony. We will have rapid tests available for anyone who needs help finding a test! </p> 
+				<br><br>
 				    <h4> Any other questions right now? Just ask! </h4>
 				  <br>
 				    <p>  We will keep updating the website with additional information about the wedding as the time nears!  </p> 
