--- a/faq.html
+++ b/faq.html
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br><br>
 				    <h4> What is the COVID protocol? </h4>
 				    <br>
-				    <p> For everyone's safety, we will ask our guests to present negative COVID tests (rapid test or PCR) within 24 hrs of the ceremony. We will have rapid tests available for anyone who needs help finding a test! </p> 
+				    <p> Our ceremony will be outdoors, however the reception will be both inside and outside the restaurant. For everyone's safety, we will ask all of our guests to present negative COVID tests (rapid test or PCR) within 24 hrs of the ceremony. We will have rapid tests available for anyone who needs help finding a test! </p> 
 				<br><br>
 				    <h4> Any other questions right now? Just ask! </h4>
 				  <br>
