--- a/faq.html
+++ b/faq.html
@@ -121,7 +121,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					   To learn more about the dress code, check out this <a href="https://www.brides.com/cocktail-attire-wedding-4844364" target="_blank">article</a>!   </p> 
 				    <br>
 				    <p>  The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. </p>  
-				      <br><br>
+				       <br><br>
+				      <h4> Can I bring a guest? </h4> 
+				    <br>
+				    If your invitation includes “and Guest” then you are welcome to bring a plus one of your choice! Otherwise please come alone or reach out if you are unsure!
+				    <br><br>
 				      <h4> Are my children invited? </h4>
 		  <br>
 				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
