--- a/faq.html
+++ b/faq.html
@@ -130,6 +130,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		  <br>
 				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
 				<br><br>
+				    <h4> Is there a gift registry? </h4>
+				    <br>
+				    <p> Your presence at our wedding is the biggest gift! We are so happy to celebrate with you and we know you are already investing it making it here!
+				    
+				    If you really want to buy a gift we put together the following registry list:
+				    https://www.myregistry.com/giftlist/tamkev
+				    
+				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift, you can simply return to the webpage and mark the gift as purchased. </p> 
+				    <br><br>
 				    <h4> What is the COVID protocol? </h4>
 				    <br>
 				    <p> Our ceremony will be outdoors, however the reception will be both inside and outside the restaurant. For everyone's safety, we will ask all of our guests to present negative COVID tests (rapid test or PCR) within 24 hrs of the ceremony. We will have rapid tests available for anyone who needs help finding a test! </p> 
