--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="menu__item "><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
 							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
 							<li class="menu__item "><a href="faq.html" class="menu__link"><span class="menu__helper">FAQ</span></a></li>
+							<li class="menu__item "><a href="rsvp.html" class="menu__link"><span class="menu__helper">RSVP</span></a></li>
 
 	<!--<li class="menu__item"><a href="#CONTACT" class="menu__link"><span class="menu__helper">Contact</span></a></li>-->
 						</ul>
