--- a/faq.html
+++ b/faq.html
@@ -133,10 +133,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <h4> Is there a gift registry? </h4>
 				    <br>
 				    <p> Your presence at our wedding is the biggest gift! We are so happy to celebrate with you and we know you are already investing it making it here!
-				    <br>
+				    <br><br>
 				    If you really want to buy a gift we put together the following registry list:
 					    <br>
-				    https://www.myregistry.com/giftlist/tamkev
+				    <a href="https://www.myregistry.com/giftlist/tamkev" target="_blank">article</a>
 				    <br>
 				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift, you can simply return to the webpage and mark the gift as purchased. </p> 
 				    <br><br>
