--- a/travel.html
+++ b/travel.html
@@ -85,6 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="menu__item  menu__item--current"><a href="travel.html" class="menu__link"><span class="menu__helper">Transportation & Accomodation</span></a></li>
 							<li class="menu__item "><a href="todo.html" class="menu__link"><span class="menu__helper">Things to Do!</span></a></li>
 							<li class="menu__item "><a href="faq.html" class="menu__link"><span class="menu__helper">FAQ</span></a></li>
+							<li class="menu__item "><a href="rsvp.html" class="menu__link"><span class="menu__helper">RSVP</span></a></li>
 
 						</ul>
 					</nav>
