--- a/faq.html
+++ b/faq.html
@@ -125,8 +125,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				       <br><br>
 				      <h4> Can I bring a guest? </h4> 
 				    <br>
-				    If your invitation includes “and Guest” then you are welcome to bring a plus one of your choice! Otherwise please come alone or reach out if you are unsure!
-				    <br><br>
+				     <p> If your invitation includes “and Guest” then you are welcome to bring a plus one of your choice! Otherwise please come alone or reach out if you are unsure!
+				     <\p> 
+					     <br><br>
 				      <h4> Are my children invited? </h4>
 		  <br>
 				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
