--- a/faq.html
+++ b/faq.html
@@ -138,7 +138,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    <br><br>
 				    If you really want to buy a gift we put together the following registry list:
 					    <br>
-				    <a href="https://www.myregistry.com/giftlist/tamkev" target="_blank">article</a>
+				    <a href="https://www.myregistry.com/giftlist/tamkev" target="_blank">https://www.myregistry.com/giftlist/tamkev</a>
 				    <br>
 				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift, you can simply return to the webpage and mark the gift as purchased. </p> 
 				    <br><br>
