--- a/rsvp.html
+++ b/rsvp.html
@@ -112,32 +112,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="panel panel-default">
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body panel_text">
-				    <h3> Frequently Asked Questions </h3>
+				    <h3> RSVP </h3>
 				    <br><br><br>
 				 	
-				    <h4> What is the Dress Code? </h4>
-				<br>
-				   <p> Cocktail attire. <br>
-					   What does this mean? If you are planning to wear pants, you might also wear a jacket and tie (but not a tuxedo!). 
-					   To learn more about the dress code, check out this <a href="https://www.brides.com/cocktail-attire-wedding-4844364" target="_blank">article</a>!   </p> 
-				    <br>
-				    <p>  The ceremony will be outside in the afternoon. In Santa Cruz summer, that could mean very hot or very cold depending on the fog layer. We'd recommend checking the weather for temperatures that week. </p>  
-				       <br><br>
-				      <h4> Can I bring a guest? </h4> 
-				    <br>
-				    If your invitation includes “and Guest” then you are welcome to bring a plus one of your choice! Otherwise please come alone or reach out if you are unsure!
+				    <h4> We can't wait to celebrate with you! </h4>
+				<br><br>
+				 Please RSVP <a href="https://forms.gle/TSYn3wXyD7nTNWEc9" target="_blank">here</a> by July 15!   </p> 
 				    <br><br>
-				      <h4> Are my children invited? </h4>
-		  <br>
-				    <p>  Yes! We will not be providing childcare but your babies and children are more than welcome to join! Feel free to reach out if you have any questions we can help with. </p> 
-				<br><br>
-				    <h4> What is the COVID protocol? </h4>
-				    <br>
-				    <p> Our ceremony will be outdoors, however the reception will be both inside and outside the restaurant. For everyone's safety, we will ask all of our guests to present negative COVID tests (rapid test or PCR) within 24 hrs of the ceremony. We will have rapid tests available for anyone who needs help finding a test! </p> 
-				<br><br>
-				    <h4> Any other questions right now? Just ask! </h4>
-				  <br>
-				    <p>  We will keep updating the website with additional information about the wedding as the time nears!  </p> 
+				 Do not hesistate to reach out with any questions! 
 				</div>
                         </div>
                     </div>
