--- a/rsvp.html
+++ b/rsvp.html
@@ -117,9 +117,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				 	
 				    <h4> We can't wait to celebrate with you! </h4>
 				<br><br>
-				 Please RSVP <a href="https://forms.gle/TSYn3wXyD7nTNWEc9" target="_blank">here</a> by July 15!   </p> 
+				 Kindly RSVP <a href="https://forms.gle/TSYn3wXyD7nTNWEc9" target="_blank">here</a> by July 15!   </p> 
 				    <br><br>
-				 Do not hesistate to reach out with any questions! 
+				 Please don't hesitate to reach out with any questions! 
 				</div>
                         </div>
                     </div>
