--- a/faq.html
+++ b/faq.html
@@ -134,13 +134,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br><br>
 				    <h4> Is there a gift registry? </h4>
 				    <br>
-				    <p> Your presence at our wedding is the biggest gift! We are so happy to celebrate with you and we know you are already investing it making it here!
+				    <p> Your presence at our wedding is the biggest gift! We are so happy to celebrate with you and we know you are already investing on making it here!
 				    <br><br>
 				    If you really want to buy a gift we put together the following registry list:
 					    <br>
 				    <a href="https://www.myregistry.com/giftlist/tamkev" target="_blank">https://www.myregistry.com/giftlist/tamkev</a>
 				    <br>
-				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift, you can simply return to the webpage and mark the gift as purchased. </p> 
+				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift or download the chrome extension. You can click "I do not want to enter my information". After purchasing simply return to the webpage and mark the gift as purchased. </p> 
 				    <br><br>
 				    <h4> What is the COVID protocol? </h4>
 				    <br>
