--- a/faq.html
+++ b/faq.html
@@ -140,7 +140,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					    <br>
 				    <a href="https://www.myregistry.com/giftlist/tamkev" target="_blank">https://www.myregistry.com/giftlist/tamkev</a>
 				    <br>
-				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift or download the chrome extension. You can click "I do not want to enter my information". After purchasing simply return to the webpage and mark the gift as purchased. </p> 
+				   	The password is "tamkev". You do not need to enter your email address in order to purchase the gift or download the browser extension. You can click "I do not want to enter my information". After purchasing simply return to the webpage and mark the gift as purchased. </p> 
 				    <br><br>
 				    <h4> What is the COVID protocol? </h4>
 				    <br>
