--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h2> Saturday, August 13, 2022</h2>
 				    <br><br><br>
-                              <h4> Ceremony </h4> 
+                              <h4> Ceremony 2:30 pm</h4> 
 				Cabrillo College Horticulture Center and Botanic Gardens <br>
 				 6500 Soquel Dr, Aptos, CA 95003
 				    <br>
-				 <h4> Reception </h4> 
+				 <h4> Reception 4:30 pm</h4> 
 				  Tramonti Santa Cruz  <br>
 				  528 Seabright Ave, Santa Cruz, CA 95062
 				       <br><br><br>
