--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h2> Saturday, August 13, 2022</h2>
 				    <br><br><br>
-                              <h4> Ceremony 2:30 pm</h4> 
+                              <h4> Ceremony </h4> 
+				    <h3> 2:30 pm </h3>
 				Cabrillo College Horticulture Center and Botanic Gardens <br>
 				 6500 Soquel Dr, Aptos, CA 95003
 				    <br>
