--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="panel-body panel_text">
 				    <h2> Saturday, August 13, 2022</h2>
 				    <br><br><br>
-                              <h4> Ceremony </h4> 
-				    <h3> 2:30 pm </h3>
+                              <h3> Ceremony </h3> 
+				    <h4> 2:30 pm </h4>
 				Cabrillo College Horticulture Center and Botanic Gardens <br>
 				 6500 Soquel Dr, Aptos, CA 95003
 				    <br>
-				 <h4> Reception 4:30 pm</h4> 
+				 <h3> Reception</h3> 
+				     <h4> 4:30 pm </h4>
 				  Tramonti Santa Cruz  <br>
 				  528 Seabright Ave, Santa Cruz, CA 95062
 				       <br><br><br>
