--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  Tramonti Santa Cruz  <br>
 				  528 Seabright Ave, Santa Cruz, CA 95062
 				       <br><br><br>
-				    
+				    <img src="images/WeddingDayTimeline.pdf" alt=" " class="img-responsive" />
 				    We can't wait to celebrate with you! For those who want to plan to join in extra festivities we are planning an easy (flat) hike on Friday afternoon (2:30 pm) and a casual brunch on Sunday (10:30 am). Details about these events will be sent out as an email!
 				  
                             </div>
